Update ü¿½ÑΓ ⁿ2.12 ìÑ»αÑαδó¡á∩ ß½πτá⌐¡á∩ óÑ½¿τ¿¡á..md

--- a/Alice'_tickets/ü¿½ÑΓ ⁿ2.12 ìÑ»αÑαδó¡á∩ ß½πτá⌐¡á∩ óÑ½¿τ¿¡á..md
+++ b/Alice'_tickets/ü¿½ÑΓ ⁿ2.12 ìÑ»αÑαδó¡á∩ ß½πτá⌐¡á∩ óÑ½¿τ¿¡á..md
@@ -27,11 +27,7 @@ $\sphericalangle$ отображение множества элементарн
 
 Пусть случайная величина $\xi$ имеет равномерное распределение на [a, b].
 
-Плотность распределения: $P(x) =
-\begin{cases} 
-0, \quad & x\notin [a, b] \\
-\frac{1}{b-a}, \quad & x \in [a,b]
-\end{cases}$
+Плотность распределения: $P(x) = \begin{cases} 0, \quad & x\notin [a, b] \\ \frac{1}{b-a}, \quad & x \in [a,b] \end{cases}$
 
 
 
