Update ü¿½ÑΓ ⁿ3.2, 3.3 Å«¬áºáΓÑ½∞¡«Ñ αáß»αÑñÑ½Ñ¡¿Ñ..md

--- a/Alice'_tickets/ü¿½ÑΓ ⁿ3.2, 3.3 Å«¬áºáΓÑ½∞¡«Ñ αáß»αÑñÑ½Ñ¡¿Ñ..md
+++ b/Alice'_tickets/ü¿½ÑΓ ⁿ3.2, 3.3 Å«¬áºáΓÑ½∞¡«Ñ αáß»αÑñÑ½Ñ¡¿Ñ..md
@@ -5,7 +5,7 @@
 Непрерывная случайная величина  $\xi $ распределена по показательному, или экспоненциальному, закону с параметром  $\lambda > 0  $, если:
 
 $$P(x) = \begin{cases} \lambda e^{-\lambda x} \quad x \geq 0 \\
-0  & \quad  x < 0
+0  \quad  x < 0
 \end{cases} $$
 
 $$F_\xi(x) = \begin{cases} 0 \quad x < 0 \\
