--- a/Alice'_tickets/ü¿½ÑΓ ⁿ3.2, 3.3 Å«¬áºáΓÑ½∞¡«Ñ αáß»αÑñÑ½Ñ¡¿Ñ..md
+++ b/Alice'_tickets/ü¿½ÑΓ ⁿ3.2, 3.3 Å«¬áºáΓÑ½∞¡«Ñ αáß»αÑñÑ½Ñ¡¿Ñ..md
@@ -4,12 +4,12 @@
 
 Непрерывная случайная величина  $\xi $ распределена по показательному, или экспоненциальному, закону с параметром  $\lambda > 0  $, если:
 
-$$P(x) = \begin{cases} \lambda e^{-\lambda x} \quad x \geq 0 \\
-0  \quad  x < 0
+$$P(x) = \begin{cases} \lambda e^{-\lambda x}, \quad x \geq 0 \\
+0,  \quad  x < 0
 \end{cases} $$
 
-$$F_\xi(x) = \begin{cases} 0 \quad x < 0 \\
-1- e^{-\lambda x} \quad x \geq 0
+$$F_\xi(x) = \begin{cases} 0, \quad x < 0 \\
+1- e^{-\lambda x}, \quad x \geq 0
 \end{cases} $$
 
 $$F_\xi(x) = \displaystyle\int\limits_{-\infty}^0 P(t)dt + \displaystyle\int\limits_{0}^x P(t)dt = \displaystyle\int\limits_{0}^x \lambda e^{-\lambda x}dt = -\displaystyle\int\limits_{0}^x e^{-\lambda x}d(-\lambda t) = \left.-e^{-\lambda x}\right|_0^x = 1- e^{-\lambda x}$$
