--- a/Alice'_tickets/ü¿½ÑΓ ⁿ3.6, 3.8 öπ¡¬µ¿∩ «Γ ß½πτá⌐¡«⌐ óÑ½¿τ¿¡δ..md
+++ b/Alice'_tickets/ü¿½ÑΓ ⁿ3.6, 3.8 öπ¡¬µ¿∩ «Γ ß½πτá⌐¡«⌐ óÑ½¿τ¿¡δ..md
@@ -16,6 +16,15 @@
 
 ### Пример
 
+\begin{tabular}{ c || c c c }
+\hline 
+Linea & Costo & Esecuzioni & Totale \\ \hline                        
+1 & $1$ & $1$ & $1$ \\
+2 & $n+1$ & $2$ & $2(n+1)$ \\
+3 & \begin{equation} \sum_{n=1}\nolimits' C_n \end{equation} & $2$ & $2(n+1)$ \\
+\hline  
+\end{tabular}
+
 Закон распределения: $\begin{array}{c|c|c} \xi & -1 & 0 & 1 \\ \hline  p_\xi & 0.5 & 0.4 & 0.1 \end{array}$
 
 1. $\eta = \xi^2 \quad$ => $\quad\begin{array}{c|c|c} \eta & 0 & 1 \\ \hline  q_\eta & 0.4 & 0.6 \end{array}$
