--- a/Alice'_tickets/ü¿½ÑΓ ⁿ3.6, 3.8 öπ¡¬µ¿∩ «Γ ß½πτá⌐¡«⌐ óÑ½¿τ¿¡δ..md
+++ b/Alice'_tickets/ü¿½ÑΓ ⁿ3.6, 3.8 öπ¡¬µ¿∩ «Γ ß½πτá⌐¡«⌐ óÑ½¿τ¿¡δ..md
@@ -16,14 +16,11 @@
 
 ### Пример
 
-\begin{tabular}{ c || c c c }
-\hline 
-Linea & Costo & Esecuzioni & Totale \\ \hline                        
-1 & $1$ & $1$ & $1$ \\
-2 & $n+1$ & $2$ & $2(n+1)$ \\
-3 & \begin{equation} \sum_{n=1}\nolimits' C_n \end{equation} & $2$ & $2(n+1)$ \\
-\hline  
-\end{tabular}
+| Tables   |      Are      |  Cool |
+|----------|:-------------:|------:|
+| col 1 is |  left-aligned | $1600 |
+| col 2 is |    centered   |   $12 |
+| col 3 is | right-aligned |    $1 |
 
 Закон распределения: $\begin{array}{c|c|c} \xi & -1 & 0 & 1 \\ \hline  p_\xi & 0.5 & 0.4 & 0.1 \end{array}$
 
