Update ü¿½ÑΓ ⁿ3.6, 3.8 öπ¡¬µ¿∩ «Γ ß½πτá⌐¡«⌐ óÑ½¿τ¿¡δ..md

--- a/Alice'_tickets/ü¿½ÑΓ ⁿ3.6, 3.8 öπ¡¬µ¿∩ «Γ ß½πτá⌐¡«⌐ óÑ½¿τ¿¡δ..md
+++ b/Alice'_tickets/ü¿½ÑΓ ⁿ3.6, 3.8 öπ¡¬µ¿∩ «Γ ß½πτá⌐¡«⌐ óÑ½¿τ¿¡δ..md
@@ -16,11 +16,10 @@
 
 ### Пример
 
+Закон распределения: 
 | $\xi  $  |      -1       |   0   |   1   |
 |----------|:-------------:|------:|------:|
 |  $p_\xi$ |  0,5 | 0.4| 0.1 |
-
-Закон распределения: $\begin{array}{c|c|c} \xi & -1 & 0 & 1 \\ \hline  p_\xi & 0.5 & 0.4 & 0.1 \end{array}$
 
 1. $\eta = \xi^2 \quad$ => $\quad\begin{array}{c|c|c} \eta & 0 & 1 \\ \hline  q_\eta & 0.4 & 0.6 \end{array}$
 2. $\eta = 2\xi \quad$ =>$\quad\begin{array}{c|c|c} \eta & -2 & 0 & 2 \\ \hline  q_\eta & 0.5 & 0.4 & 0.1 \end{array}$
