--- a/Alice'_tickets/ü¿½ÑΓ ⁿ3.6, 3.8 öπ¡¬µ¿∩ «Γ ß½πτá⌐¡«⌐ óÑ½¿τ¿¡δ..md
+++ b/Alice'_tickets/ü¿½ÑΓ ⁿ3.6, 3.8 öπ¡¬µ¿∩ «Γ ß½πτá⌐¡«⌐ óÑ½¿τ¿¡δ..md
@@ -21,8 +21,16 @@
 |----------|:-------------:|------:|------:|
 |  $p_\xi$ |  0,5 | 0.4| 0.1 |
 
-1. $\eta = \xi^2 \quad$ => $\quad\begin{array}{c|c|c} \eta & 0 & 1 \\ \hline  q_\eta & 0.4 & 0.6 \end{array}$
-2. $\eta = 2\xi \quad$ =>$\quad\begin{array}{c|c|c} \eta & -2 & 0 & 2 \\ \hline  q_\eta & 0.5 & 0.4 & 0.1 \end{array}$
+1. $\eta = \xi^2 \quad$ => 
+| $\eta  $  |      0       |   1   |
+|----------|:-------------:|------:|
+|  $q_\eta$ |  0,4 | 0.6|
+
+2. $\eta = 2\xi \quad$ =>
+
+| $\eta  $  |      -2      |   0   |   2   |     
+|----------|:-------------:|------:|------:|
+|  $q_\eta$ |  0,5 | 0.4|  0,1|
 
 ## Для непрерывной случайной величины
 
