--- a/Alice'_tickets/ü¿½ÑΓ ⁿ3.6, 3.8 öπ¡¬µ¿∩ «Γ ß½πτá⌐¡«⌐ óÑ½¿τ¿¡δ..md
+++ b/Alice'_tickets/ü¿½ÑΓ ⁿ3.6, 3.8 öπ¡¬µ¿∩ «Γ ß½πτá⌐¡«⌐ óÑ½¿τ¿¡δ..md
@@ -10,7 +10,7 @@
 
 Если  $\xi $ - дискретная случайная величина, то и  $\eta $ - дискретная случайная величина.
 
-Пусть  $\xi = (x_i, p_i)_{i\in I}, \eta = (y_i, q_i)_{i\in I} $ и  $\eta = f(\xi) $
+Пусть  $\xi = (x_i, p_i){i\in I}, \eta = (y_i, q_i)_{i\in I} $ и  $\eta = f(\xi) $
 
 Тогда  $y_i = f(x_i) $,  $q_i = \displaystyle\sum_{i\in I}(p_i : f(x_i) = y_i) $
 
