Update ü¿½ÑΓ ⁿ3.6, 3.8 öπ¡¬µ¿∩ «Γ ß½πτá⌐¡«⌐ óÑ½¿τ¿¡δ..md

--- a/Alice'_tickets/ü¿½ÑΓ ⁿ3.6, 3.8 öπ¡¬µ¿∩ «Γ ß½πτá⌐¡«⌐ óÑ½¿τ¿¡δ..md
+++ b/Alice'_tickets/ü¿½ÑΓ ⁿ3.6, 3.8 öπ¡¬µ¿∩ «Γ ß½πτá⌐¡«⌐ óÑ½¿τ¿¡δ..md
@@ -12,7 +12,7 @@
 
 Пусть 
 
-$$\xi = (x_i, p_i)_{i\in I}, \eta = (y_i, q_i)_{i\in I} $$
+$$\xi = (x_i, p_i){i\in I}, \eta = (y_i, q_i)_{i\in I} $$
 
 и  $\eta = f(\xi) $
 
