Update ü¿½ÑΓ ⁿ3.6, 3.8 öπ¡¬µ¿∩ «Γ ß½πτá⌐¡«⌐ óÑ½¿τ¿¡δ..md

--- a/Alice'_tickets/ü¿½ÑΓ ⁿ3.6, 3.8 öπ¡¬µ¿∩ «Γ ß½πτá⌐¡«⌐ óÑ½¿τ¿¡δ..md
+++ b/Alice'_tickets/ü¿½ÑΓ ⁿ3.6, 3.8 öπ¡¬µ¿∩ «Γ ß½πτá⌐¡«⌐ óÑ½¿τ¿¡δ..md
@@ -4,13 +4,13 @@
 
 Задано $(\Omega, F, \mathbb P)$
 
-Пусть  $\exists  \xi $ - случайная величина, принадлежащая этому векторному пространству. Если взять числовую функцию  $y=f(x) $ и по ней для  $\eta $ сопоставить значения с  $\xi $:  $\eta = f(\xi) $, то  $\eta $ - функция от случайно величины
+Пусть  $\exists  \xi $ - случайная величина, принадлежащая этому векторному пространству. Если взять числовую функцию  $y=f(x) $ и по ней для  $\eta $ сопоставить значения с  $\xi : \eta = f(\xi) $, то  $\eta $ - функция от случайно величины
 
 ## Для дискретной случайной величины
 
 Если  $\xi $ - дискретная случайная величина, то и  $\eta $ - дискретная случайная величина.
 
-Пусть $\xi = (x_i, p_i)_{i\in I}$ и  $\eta = f(\xi) $
+Пусть $\xi = (x_i, p_i)_{i\in I} $ и $\eta = f(\xi) $
 
 Тогда  $y_i = f(x_i) $,  $q_i = \displaystyle\sum_{i\in I}(p_i : f(x_i) = y_i) $
 
