Update ü¿½ÑΓ ⁿ3.6, 3.8 öπ¡¬µ¿∩ «Γ ß½πτá⌐¡«⌐ óÑ½¿τ¿¡δ..md

--- a/Alice'_tickets/ü¿½ÑΓ ⁿ3.6, 3.8 öπ¡¬µ¿∩ «Γ ß½πτá⌐¡«⌐ óÑ½¿τ¿¡δ..md
+++ b/Alice'_tickets/ü¿½ÑΓ ⁿ3.6, 3.8 öπ¡¬µ¿∩ «Γ ß½πτá⌐¡«⌐ óÑ½¿τ¿¡δ..md
@@ -69,9 +69,13 @@ $\eta = (y_i, q_i)_{i\in I} $
 
 ### Формула для вычисления математического ожидания и дисперсии для случайной величины Y, являющейся функцией от случайной величины X.
 
-$M_\eta = \begin{cases} \displaystyle\sum_{i \in I} f(x_i)p_i, & \quad \text{для дискретной с.в. } \xi \\ \displaystyle\int\limits_{-\infty}^\infty f(x)P_\xi(x)dx, & \quad \text{для непрерывной с.в. } \xi \end{cases}$
+$M_\eta = \begin{cases} \displaystyle\sum_{i \in I} f(x_i)p_i, \quad \text{для дискретной с.в. } \xi \\ 
+\displaystyle\int\limits_{-\infty}^\infty f(x)P_\xi(x)dx,  \quad \text{для непрерывной с.в. } \xi 
+\end{cases}$
 
-$D_\eta = \begin{cases} \displaystyle\sum_{i \in I} (f(x_i)-M_\eta)^2p_i, & \quad \text{для дискретной с.в. } \xi \\ \displaystyle\int\limits_{-\infty}^\infty (f(x)-M_\eta)^2P_\xi(x)dx, & \quad \text{для непрерывной с.в. } \xi \end{cases}$
+$D_\eta = \begin{cases} \displaystyle\sum_{i \in I} (f(x_i)-M_\eta)^2p_i,  \quad \text{для дискретной с.в. } \xi \\ 
+\displaystyle\int\limits_{-\infty}^\infty (f(x)-M_\eta)^2P_\xi(x)dx,  \quad \text{для непрерывной с.в. } \xi 
+\end{cases}$
 
 
 
